2003-10-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, cong-dispspec.c, cong-editor-area-entity-decl.c, cong-editor-area-entity-ref.c, cong-editor-area-span-tag.c, cong-editor-area-structural.c, cong-editor-area-unknown-tag.c, cong-editor-node-comment.c, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.c, cong-file-export.c, cong-file-import.c, cong-file-new.c, cong-file-open.c, cong-menus.c, cong-modification-set-dtd-ptr.c, cong-node-properties-dialog.c, cong-plugin.c, cong-primary-window.c, cong-util.c, main.c, plugin-doc-from-xds.c, plugin-docbook.c, plugin-lists-area-listitem.c, plugin-lists-node-element-listitem.c, popup.c

	Made most of the CongApp data fields private
	
	--- Version 0.7.5 ---		

	* cong-menus.c

	Disabled the debug menus

2003-10-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-registry.c, cong-document.c, cong-error-file-open.c, cong-error-file-save.c, cong-file-import.c, cong-file-open.c, cong-plugin.c, cong-util.c, cong-util.h, global.h, plugin-convert-case.c, plugin-dtd.c, plugin-website.c, xmldata.c

	Isolated dependencies on GnomeVFS, most things now use cong-vfs
	
	* cong-vfs.c, cong-vfs.h, Makefile.am

	New files:  Handling of URIs moved into a single place

	* cong-command.c

	Restore unmodified status of doc when user undoes enough commands

2003-10-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-menus.c, cong-primary-window.c

	Undo/redo menu items and toolbar buttons now are sensitive/insensitive correctly
	
	* cong-command-history.c

	Added a changed signal
	
	* cong-command.c

	Fixed a warning
